# dev-guchengpeng

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  env.sh  make-link-sdk.sh  make.sh  make_clean.sh  makefile  merge-lib.sh
link/: CMakeLists.txt
link/fastfwd/: Makefile  configure
link/fastfwd/src/: Makefile  fast_forward.grpc.pb.cc  fast_forward.grpc.pb.h  fast_forward.pb.cc  fast_forward.pb.h  fast_forward_async_server.cpp  fast_forward_server.cpp  fastfwd.cpp  fastfwd.hpp  linking_fastfwd.cpp  util.hpp
link/fastfwd/src/protos/: fast_forward.proto
link/fastfwd/test/: Makefile  fastfwd_file_test.cpp  fastfwd_grpc_client.cpp  fastfwd_load_test.cpp
link/libice/: CMakeLists.txt  ice.c  ice.h
link/libice/test/: CMakeLists.txt  main.c
link/libmosquitto/: CMakeLists.txt  mosquitto.c  mosquitto.h  mqtt.h
link/libmosquitto/test/: CMakeLists.txt  ca.crt  main.c
link/libmqtt/: CMakeLists.txt  control.c  control.h  mqtt.c  mqtt.h  mqtt_internal.h  queue.c
link/libmqtt/mosquitto/: mos_mqtt.c  mos_mqtt.h
link/libmqtt/test/: CMakeLists.txt  main.c
link/libmqtt/wolfmqtt/: wolfmqtt.c  wolfmqtt.h
link/libmuxer/: CMakeLists.txt  common.hpp  input.cpp  input.hpp  media.cpp  media.hpp  muxer.cpp  muxer.hpp  output.cpp  output.hpp  packet.cpp  packet.hpp  stat.cpp  stat.hpp
link/librtp/: CMakeLists.txt  JitterBuffer.c  JitterBuffer.h  MediaStream.c  MediaStream.h  PeerConnection.c  PeerConnection.h  heap.c  heap.h  qrtc.h  readme.txt  rtptest.c
link/librtp/iceplayer/: iceplayer.cpp  iceplayer.pro  linking.cpp  qml.qrc
link/librtpoverice/: CMakeLists.txt  MediaStream.c  MediaStream.h  PeerConnection.c  PeerConnection.h  icetest.c  readme.txt  rtptest.c
link/libsdk/: CMakeLists.txt  Makefile  callMgr.c  callMgr.h  dbg.c  dbg.h  framework.c  framework.h  fsm.dot  merge-lib.sh  mock_api.c  mock_rtc.c  mqtt.h  pjproject-2.7.2  qrtc.h  queue.c  queue.h  sdk_interface.c  sdk_interface.h  sdk_interface_p2p.h  sdk_local.h  sip.c  sip.h  test.c  test.sh  uaMgr.c  uaMgr.h
link/libsdk/sdk_demo/: Makefile  aj_ipc.c  command.c  command.h  common.h  dbg.c  dbg.h  dev_config.h  dev_core.c  dev_core.h  h264_parse.c  main.c  main.h  readme  stream.c  stream.h
link/libsdk/sdk_demo/inc/: data_struct.h  devsdk.h  media_cfg.h
link/libsdk/test/: Makefile  answercall_test.c  answercall_test.h  call_test.c  call_test.h  hangup_call_test.c  hangup_call_test.h  register_test.c  rejectcall_test.c  rejectcall_test.h  send_pkt_test.c  send_pkt_test.h  test  test.c  unit_test.c  unit_test.h
link/libsdk/test/callee/: Makefile  callee.c
link/libsdk/test_calling/: Makefile  test.c  unit_test.c  unit_test.h
link/libsdk/test_demo/: Makefile  test.c
link/libsdk/test_mqtt/: Makefile  test.c
link/libsdk/test_receivedcall/: Makefile  test.c  unit_test.c
link/libsip/: CMakeLists.txt  sip.c  sip.h  sip_internal.c  sip_internal.h
link/libsip/doc/: libsip.mdj
link/libsip/test/: CMakeLists.txt  main.c
link/libsip/test/day_night_test/: CMakeLists.txt
link/libsip/test/day_night_test/uac/: CMakeLists.txt  main.c
link/libsip/test/day_night_test/uas/: CMakeLists.txt  main.c
link/libsip/test/max_account/: CMakeLists.txt  README  main.c
link/libsip/test/max_call/: README
link/libsip/test/max_call/uac/: CMakeLists.txt  main.c
link/libsip/test/max_call/uas/: CMakeLists.txt  main.c
link/libsip/test/max_ongoning_call_for_account/: README
link/libsip/test/max_ongoning_call_for_account/uac/: CMakeLists.txt  main.c
link/libsip/test/max_ongoning_call_for_account/uas/: CMakeLists.txt  main.c
link/libsip/test/perf_test/uac/: CMakeLists.txt  main.c
link/libsip/test/perf_test/uas/: CMakeLists.txt  main.c
link/libsip/test/thread_test/: CMakeLists.txt  README  main.c
link/libsip/test/uac_hangup_call/: README
link/libsip/test/uac_hangup_call/uac/: CMakeLists.txt  main.c
link/libsip/test/uac_hangup_call/uas/: CMakeLists.txt  main.c
link/libsip/test/uas_hangup_call/: README
link/libsip/test/uas_hangup_call/uac/: CMakeLists.txt  main.c
link/libsip/test/uas_hangup_call/uas/: CMakeLists.txt  main.c
link/libtsuploader/: CMakeLists.txt  TODO.txt  adts.c  base.h  build-arm.sh  ipc_test.c  log.c  log.h  mpegts.c  queue.c  queue.h  readme.txt  resource.c  servertime.c  servertime.h  socket_logging.c  socket_logging.h  test.c  tsmux.c  tsmuxuploader.c  tsmuxuploader.h  tsuploaderapi.c  tsuploaderapi.h  uploader.c  uploader.h
link/libtsuploader/c-sdk/: CMakeLists.txt
link/libtsuploader/c-sdk/qiniu/: auth_mac.c  io.c  io.h
link/libtsuploader/demo/: cfg_parse.c  cfg_parse.h  dbg.c  dbg.h  ipc.conf  ipc_test.c  ipc_test.h  log2file.c  mock_anjia.c  mymalloc.c  mymalloc.h  queue.c  socket_logging.c  socket_logging.h
link/libtsuploader/demo/test/: Makefile  queue_test.c
link/libtsuploader/pcdemo/: CMakeLists.txt  flag.c  flag.h  test.c
link/manager/: conf.js
link/manager/src/controllers/: common.go  index.go  login.go  token.go
link/manager/src/main/: main.go
link/manager/src/qauth/: account.go  aksk.go
link/manager/src/qauth/config/: const.go  pub_conf.go
link/manager/src/system/: system.go
link/manager/src/views/: overview.html
link/stun/: Makefile
link/stun/src/: main.go
link/stun/src/conf/: args.go
link/stun/src/stun/: common.go  rfc5389.go  rfc5766.go
link/stun/src/util/dbg/: dump.go
link/util/: queue.c
link/vod/: Makefile  README.md  conf.js  env.sh  linking_vod.conf
link/vod/src/qiniu.com/: Gopkg.toml
link/vod/src/qiniu.com/auth/: aksk.go  aksk_test.go
link/vod/src/qiniu.com/conf/: conf.js
link/vod/src/qiniu.com/controllers/: 1517444052127-1517444059607.ts  aksk.go  aksk_test.go  common.go  common_test.go  coverage.out  fastforwd.go  fastforwd_test.go  fop.go  frames.go  frames_test.go  kodocallback.go  live.go  live_test.go  namespace.go  namespace_test.go  playback.go  playback_test.go  saveas.go  saveas_test.go  segments.go  segments_test.go  store.go  store_test.go  ua.go  ua_test.go
link/vod/src/qiniu.com/db/: db.go  db_test.go
link/vod/src/qiniu.com/m3u8/: mkm3u8.go  mkm3u8_test.go
link/vod/src/qiniu.com/main/: main.go
(+105 files in other folders)
